--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node" : "8.6.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "hbs": "^4.0.1",
+    "request": "^2.83.0"
   }
 }
